# conman

./: .gitignore  .packit.yaml  .travis.yml  ChangeLog  DISCLAIMER  FAQ  HISTORY  INSTALL  META  Make-rpm.mk  Makefile.am  Makefile.in  NEWS  PLATFORMS  README  README.md  THANKS  VERSION  aclocal.m4  bool.h  bootstrap  client-conf.c  client-sock.c  client-tty.c  client.c  client.h  common.c  common.h  config.h.in  configure  configure.ac  configure.in  conman.conf  conman.exp  conman.h  conman.spec  conman.spec.in  conmen  errors.c  errors.h  (+43 more)
build-aux/: gen-date  gen-version
config/: config.h.in
etc/: conman.conf  conman.init  conman.init.in  conman.logrotate  conman.logrotate.in  conman.service  conman.service.in  conman.sysconfig  conman.sysconfig.in
lib/: alpha.exp  conman.exp
lib/examples/: boot_alpha.exp  mac.exp  rmc.exp  shell_cmd_1.exp  shell_cmd_n.exp  srm.exp  wtf.exp
lib/exec/: README  cyclades-ssh.exp  cyclades-telnet.exp  freeipmi.exp  hp-ilo.exp  hp-lo100.exp  ibm-bc.exp  ibm-hs20.exp  ipmi.exp  ipmiconsole.exp  ipmitool.exp  ssh.exp  sun-elom.exp  sun-ilom.exp  sun-v20z-v40z.exp
m4/: x_ac_check_pthreads.m4  x_ac_check_stdbool.m4  x_ac_enable_debug.m4  x_ac_runstatedir.m4  x_ac_with_freeipmi.m4  x_ac_with_sysconfigdir.m4  x_ac_with_tcp_wrappers.m4
man/: conman.1.in  conman.conf.5.in  conmand.8.in
scripts/examples/: README  boot_alpha.exp  mac.exp  rmc.exp  shell_cmd_1.exp  shell_cmd_n.exp  srm.exp  wtf.exp
scripts/exec/: cyclades-ssh.exp  cyclades-telnet.exp  hp-ilo.exp  hp-lo100.exp  ibm-bc.exp  ipmiconsole.exp  ipmitool.exp  ssh.exp  sun-elom.exp  sun-ilom.exp  sun-v20z-v40z.exp
scripts/lib/: alpha.exp  conman.exp
src/: Makefile.am  Makefile.in  bool.h  client-conf.c  client-sock.c  client-tty.c  client.c  client.h  common.c  common.h  inevent.c  inevent.h  lex.c  lex.h  list.c  list.h  log.c  log.h  server-conf.c  server-esc.c  server-ipmi.c  server-logfile.c  server-obj.c  server-process.c  server-serial.c  server-sock.c  server-telnet.c  server-test.c  server-unixsock.c  server.c  server.h  tpoll.c  tpoll.h  util-file.c  util-file.h  util-net.c  util-net.h  util-str.c  util-str.h  util.c  (+2 more)
src/common/: log.c  log.h
src/conman/: Makefile.am  Makefile.in  conman.c
src/conmand/: Makefile.am  Makefile.in  conf.c  conf.h  conmand.c
src/missing/: README
test/: 0001-basic.t  1000-chaos-rpm.t
test/sharness.d/: 01-directories.sh  03-conmand.sh
tests/: 0001-basic.t  1000-chaos-rpm.t
tests/sharness.d/: 02-executables.sh  03-conmand.sh
